Round/Shot detail in PBI, move more stats to round level for filtered calculations and trending