@@ -5,8 +5,6 @@ import lombok.*;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Getter
 public class RoundDetail extends RoundSummary {
 
@@ -15,7 +13,7 @@ public class RoundDetail extends RoundSummary {
 
 	public RoundDetail(int number, GolfRound round) {
 		super(number, round);
-		this.holes = round.getHoles().map(HoleAnalysis::new).collect(toList());
-		this.shots = round.getHoles().allShots().map(ShotAnalysis::new).collect(toList());
+		this.holes = round.getHoles().map(HoleAnalysis::new).toList();
+		this.shots = round.getHoles().allShots().map(ShotAnalysis::new).toList();
 	}
 }
